<package format="3">
  <name>jsk_hark_msgs</name>
  <version>4.3.2</version>
  <description>jsk_hark_msgs</description>
  <maintainer email="s-fujii@jsk.t.u-tokyo.ac.jp">Shohei Fujii</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_hark_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="s-fujii@jsk.t.u-tokyo.ac.jp">Shohei Fujii</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
