<package format="3">
  <name>posedetection_msgs</name>
  <version>4.3.2</version>
  <description>posedetection_msgs provides messages and services to facilitate passing pose detection results and features.</description>
  <!-- <maintainer>Rosen Diankov</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/posedetection_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Rosen Diankov</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
