<?xml version="1.0"?>
<package format="3">
  <name>jsk_recognition_msgs</name>
  <version>1.2.15</version>
  <description>ROS messages for jsk_pcl_ros and jsk_perception.</description>

  <url type="repository">http://github.com/jsk-ros-pkg/jsk_recognition</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_recognition/issues</url>
  <url type="website">https://jsk-docs.readthedocs.io/projects/jsk_recognition/en/latest/jsk_recognition_msgs</url>


  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <depend>pcl_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend condition="$ROS_VERSION == 1">>message_generation</build_depend>  <exec_depend>message_generation</exec_depend>
  <depend>jsk_footstep_msgs</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>

  <depend condition="$ROS_VERSION == 2">action_msgs</depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
