<?xml version="1.0"?>
<package format="3">
  <name>autoware_system_msgs</name>
  <version>1.14.0</version>
  <description>The autoware_system_msgs package</description>
  <maintainer email="masaya.kataoka@tier4.jp">Masaya Kataoka</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
